2008-07-10  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	Plugin Manager:
	--------------
	* libavogadro/src/pluginmanager.*: The PluginManager class. This class
	is now a central class to handle the loading of plugins.

	* libavogadro/src/pluginitemmodel.*: The PluginItemModel class.

	* libavogadro/src/pluginlistview.*: The PluginListView class.

	* libavogadro/src/plugindialog.*: The PluginManager dialog.

	* libavogadro/src/glwidget.*: Use PluginManager. 

	* libavogadro/src/toolgroup.cpp: Use PluginManager.

	* avogadro/src/mainwindow.ui, avogadro/src/mainwindow.cpp: Use the 
	PluginManager. Added the menu entry "Settings > Plugin Manager".

	TODO: - Avogadro needs to be restarted at the moment in order
	        for the changes to take effect.
	      - Not yet used for extensions.
	      - Better descriptions, download updates, ...

	Compiling problems?
	  - run cmake again to include the new *.h, *.cpp and *.ui files...
	  - if mainwindow.cpp can't find <avogadro/pluginmanager.h>, copy the
	    file to /usr/(local/)include/avogadro

	Remove overlay extension:
	------------------------
	* libavogadro/src/extensions/CMakeLists.txt: Removed overlay
	extension.
	* libavogadro/src/extensions/overlayextension.*: Deleted.
	* libavogadro/src/CMakeLists.txt: Include *.ui in the build.

2008-07-07  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* sip/*: Initial attempt to make SIP python bindings.

	* libavogadro/src/painter(device).h: export Painter and PainterDevice.
	See sip/README for more info (revert if this is wrong)

2008-07-04  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/enginecolorswidget.*: Widget for setting an engine's
	color map.

	* avogadro/src/mainwindow.cpp: Add the color widget to engine settings
	window.

	* libavogadro/src/engine.cpp: emit changed() when
	Engine::setColorMap() is called.

2008-07-03  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalengine.cpp: Use some of the newer